Fix not loading some xmp exif metadata correctly

Before this commit, Krita would not consider "32 / 10"
a valid value for a Rational field in XMP exif metadata.
Those files however exist in the wild and the regex to
accept the additional spaces isn't much different.
This commit changes the regex to accept possible spaces.

BUG:520981